[tool.poetry]
name = "bo-nedaber"
version = "0.1.0"
description = ""
authors = ["Noam Yorav-Raphael"]
readme = "README.md"
packages = [{include = "bo_nedaber"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
psycopg = {extras = ["binary"], version = "^3.1.8"}
pqdict = "^1.2.0"
dataclasses-json = "^0.5.7"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pylint = "^2.16.2"
mypy = "^1.1.1"
requests = "^2.28.2"
devtools = "^0.10.0"
types-requests = "^2.28.11.13"
rich = "^13.3.1"
pytest = "^7.2.1"
black = {extras = ["d"], version = "^23.1.0"}
alembic = {extras = ["tz"], version = "^1.10.2"}
# For alembic
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint."messages control"]
disable = [
    "C", # convention warnings
    "too-few-public-methods", # R0903: warns about a class with too few methods, doesn't know about our use of types!
    "no-else-return", # R1705: warns about "elif" after "return". I actually have no problem with it.
    "too-many-return-statements", # R0911
    "too-many-arguments", # R0913
]

[tool.mypy]
strict = true
files = ["*.py", "bo_nedaber/*.py", "tests/*.py"]
mypy_path = 'stubs'
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = [
    "test",
]
