[project]
name = "bo-nedaber"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

readme = "README.md"
dependencies = [
  "aiohttp",
  "dataclasses-json == 0.5.7",
  "fastapi == 0.92.0",
  "pqdict == 1.2.0",
  "psycopg[binary]",
  "pydantic[dotenv] == 1.10.6",
  "python-dotenv>=1.0.1",
  "uvicorn == 0.20.0",
]

[dependency-groups]
dev = [
  "pre-commit == 4.2.0",
  "mypy == 1.1.1",
  "requests == 2.28.2",
  "devtools == 0.10.0",
  "types-requests == 2.28.11.15",
  "rich == 13.3.2",
  "pytest == 7.2.2",
  "pylint>=3.3.1",
]
[tool.isort]
profile = "black"

[tool.pylint."messages control"]
disable = [
  "C",                             # convention warnings
  "too-few-public-methods",        # R0903: warns about a class with too few methods, doesn't know about our use of types!
  "no-else-return",                # R1705: warns about "elif" after "return". I actually have no problem with it.
  "no-else-break",                 # R1723: Unnecessary "elif" after "break". I actually have no problem with it.
  "too-many-return-statements",    # R0911
  "too-many-arguments",            # R0913
  "too-many-positional-arguments", # R0917
]

[tool.mypy]
strict = true
files = ["*.py", "bo_nedaber/*.py", "tests/*.py"]
mypy_path = 'stubs'
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = ["test"]
