[project]
name = "bo-nedaber"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"

readme = "README.md"
dependencies = [
  "aiohttp",
  "dataclasses-json == 0.5.7",
  "fastapi>=0.115.12",
  "pqdict == 1.2.0",
  "psycopg[binary]",
  "pydantic >= 2.11.3",
  "pydantic-settings>=2.9.1",
  "python-dotenv>=1.0.1",
  "uvicorn >= 0.34.1",
]

[dependency-groups]
dev = [
  "pre-commit == 4.2.0",
  "mypy==1.15.0",
  "requests == 2.28.2",
  "devtools == 0.10.0",
  "types-requests == 2.28.11.15",
  "rich == 13.3.2",
  "pytest>=8.3.5",
  "pylint>=3.3.1",
  "alembic>=1.15.2",
]
[tool.isort]
profile = "black"

[tool.pylint."messages control"]
disable = [
  "C",                             # convention warnings
  "too-few-public-methods",        # R0903: warns about a class with too few methods, doesn't know about our use of types!
  "no-else-return",                # R1705: warns about "elif" after "return". I actually have no problem with it.
  "no-else-break",                 # R1723: Unnecessary "elif" after "break". I actually have no problem with it.
  "too-many-return-statements",    # R0911
  "too-many-arguments",            # R0913
  "too-many-positional-arguments", # R0917
  "no-member",                     # there were false positives, and mypy checks it better
]

[tool.mypy]
strict = true
files = ["*.py", "bo_nedaber/*.py", "tests/*.py"]
mypy_path = 'stubs'
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = ["tests"]
